fixed z-index conflict with material ui

--- a/src/app/components/progress/progress.component.scss
+++ b/src/app/components/progress/progress.component.scss
@@ -12,7 +12,7 @@
     position: fixed;
     left: 0;
     top: 0;
-    z-index: 1;
+    z-index: 100;
     opacity: 0;
     align-items: start;
     height: 0;
